--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,16 +9,25 @@ font-size: 20px;
 }
 
 .nav-link {
-    padding: 0 5px 0 5px;
+    padding: 15px 5px 0 5px;
     position: relative;
+    
   }
 
 
-  .nav-link:before{
+  .slash:before{
       content: " / ";
       position: absolute;
       right: 0;
       top : 10px;
+      margin-left: 20px;
   }
 
+  hr.style-two {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
  
