--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,9 +71,9 @@ background-color:  var(--background);
  
 }
 
-.dropdown-menu {
+.drop-link {
   border-radius: 0px;
-  
+  background-color: chartreuse;
 }
 
 .login-box {
@@ -249,10 +249,14 @@ body{
 
 .card-img-top{
   height: 310px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
 }
 
 .product-card{
   margin-bottom: 30px;
+  
   
 }
 
@@ -261,6 +265,7 @@ body{
   color: #000000;
   font-size: 40px;
 }
+
 
 
 
@@ -295,3 +300,13 @@ body{
 .card-body{
   border-top:1px solid black;
 }
+
+.delete-form{
+  display:inline-block;  
+      
+}
+
+.footer{
+  bottom: 0;
+}
+
